<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="#80000000"
        android:orientation="vertical">

        <TextView

            android:id="@+id/textSurname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:textSize="15sp"
            android:textColor="@color/yellow"
            android:textStyle="normal"
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp"
            android:text="Surname"/>

        <TextView
            android:id="@+id/firstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@id/textSurname"
            android:layout_marginStart="130dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/yellow"
            android:textSize="15sp"
            android:textStyle="normal"
            android:text="First name"/>

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="5dp"
            android:layout_below="@id/textSurname"
            android:layout_marginTop="3dp"
            android:textSize="15sp"
            android:textStyle="normal"
            android:textColor="#FFFFFF"
            android:text="FOLARIN"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/name"
            android:layout_marginStart="133dp"
            android:layout_below="@id/firstName"
            android:layout_marginTop="3dp"
            android:textColor="#FFFFFF"
            android:textStyle="normal"
            android:textSize="15sp"
            android:text="ISAAC"/>

        <TextView
            android:id="@+id/emailHead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="5dp"
            android:layout_below="@id/name"
            android:layout_marginTop="6dp"
            android:textSize="15sp"
            android:textColor="@color/yellow"
            android:textStyle="normal"
            android:text="Email"/>

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginTop="3dp"
            android:textSize="15sp"
            android:textColor="#FFFFFF"
            android:layout_below="@id/emailHead"
            android:textStyle="normal"
            android:layout_marginStart="5dp"
            android:text="folarinisaac36@gmail.com"/>

        <TextView
            android:id="@+id/phoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="5dp"
            android:layout_below="@id/email"
            android:layout_marginTop="5dp"
            android:textSize="15sp"
            android:textColor="@color/yellow"
            android:textStyle="normal"
            android:text="Phone Number"/>

        <TextView
            android:id="@+id/gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/email"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@id/phoneNumber"
            android:layout_marginStart="90dp"
            android:textSize="15sp"
            android:textColor="@color/yellow"
            android:textStyle="normal"
            android:text="Gender"/>

        <TextView
            android:id="@+id/number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@id/phoneNumber"
            android:layout_marginStart="5dp"
            android:layout_marginTop="3dp"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            android:textStyle="normal"
            android:text="09034029095"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/number"
            android:layout_below="@id/gender"
            android:layout_marginStart="100dp"
            android:layout_marginTop="3dp"
            android:textSize="15sp"
            android:textColor="#FFFFFF"
            android:textStyle="normal"
            android:text="Male"/>

        <TextView
            android:id="@+id/membership"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@id/number"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:textStyle="normal"
            android:textColor="@color/yellow"
            android:textSize="15sp"
            android:text="Membership Type"/>

        <TextView
            android:id="@+id/courses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@id/membership"
            android:layout_marginStart="5dp"
            android:layout_marginTop="3dp"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            android:textStyle="normal"
            android:text="HUB COURSES"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@id/courses"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/yellow"
            android:textSize="15sp"
            android:textStyle="normal"
            android:text="Business name"/>

    </RelativeLayout>

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/relativeLayout"
        android:layout_marginTop="10dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="#80000000">

        <TextView
            android:id="@+id/acctCreated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="5dp"
            android:textSize="15sp"
            android:textColor="@color/yellow"
            android:textStyle="normal"
            android:layout_marginStart="5dp"
            android:text="Account created"/>

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@id/acctCreated"
            android:layout_marginTop="3dp"
            android:layout_marginStart="5dp"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            android:textStyle="normal"
            android:text="@string/date"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@id/acctCreated"
            android:textColor="@color/yellow"
            android:textSize="15sp"
            android:textStyle="normal"
            android:layout_marginStart="150dp"
            android:text="@string/acctDate"/>

        <TextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="5dp"
            android:layout_below="@id/date"
            android:layout_marginTop="5dp"
            android:textStyle="normal"
            android:textColor="@color/yellow"
            android:textSize="15sp"
            android:text="@string/login"/>

        <TextView
            android:id="@+id/login_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/login"
            android:layout_marginStart="5dp"
            android:layout_alignParentStart="true"
            android:layout_marginTop="3dp"
            android:textSize="15sp"
            android:textColor="#FFFFFF"
            android:textStyle="normal"
            android:text="@string/login_date"/>

        <TextView
            android:id="@+id/last_seen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="5dp"
            android:layout_below="@id/login_date"
            android:textColor="@color/yellow"
            android:layout_marginTop="5dp"
            android:textStyle="normal"
            android:textSize="15sp"
            android:text="@string/last_seen"/>

        <TextView
            android:id="@+id/seen_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="3dp"
            android:layout_below="@id/last_seen"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            android:textStyle="normal"
            android:text="@string/seen_date"/>

        <TextView
            android:id="@+id/hub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/last_seen"
            android:layout_below="@id/login_date"
            android:layout_marginStart="130dp"
            android:textColor="@color/yellow"
            android:textStyle="normal"
            android:textSize="15sp"
            android:text="@string/hub"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/hub"
            android:layout_toEndOf="@id/seen_date"
            android:layout_marginTop="3dp"
            android:layout_marginStart="110dp"
            android:background="@drawable/round_button"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            android:textStyle="normal"
            android:textAllCaps="true"
            android:text="@string/button"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"/>





    </RelativeLayout>







</androidx.constraintlayout.widget.ConstraintLayout>