<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/data_model"
    tools:context=".Activity.MainActivity">

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar"/>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"/>

    <LinearLayout
        android:id="@+id/linearBlue"
        android:layout_width="0dp"
        android:layout_height="70dp"
        app:layout_constraintTop_toBottomOf="@id/app_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginStart="5dp"
        android:background="@color/blue"
        android:layout_marginEnd="5dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="60dp"
            android:layout_height="70dp"
            android:background="#1874CD"
            android:src="@drawable/users"
            android:padding="10dp"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:layout_marginStart="20dp"
                android:text="12"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:textSize="15sp"
                android:text="members"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:layout_marginTop="5dp"/>




        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearYellow"
        android:layout_width="0dp"
        android:layout_height="70dp"
        app:layout_constraintTop_toBottomOf="@id/app_bar"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginStart="5dp"
        android:background="#FFD700"
        android:layout_marginEnd="5dp">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="60dp"
            android:layout_height="70dp"
            android:background="#FF8C00"
            android:src="@drawable/users"
            android:padding="10dp"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:layout_marginStart="20dp"
                android:text="5"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:textSize="15sp"
                android:text="subscribed"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:layout_marginTop="5dp"/>




        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearGreen"
        android:layout_width="0dp"
        android:layout_height="70dp"
        app:layout_constraintTop_toBottomOf="@id/linearBlue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginStart="5dp"
        android:background="#00CC66"
        android:layout_marginEnd="5dp">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="60dp"
            android:layout_height="70dp"
            android:background="#3CB371	"
            android:src="@drawable/users"
            android:padding="10dp"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:layout_marginStart="20dp"
                android:text="4"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:textSize="15sp"
                android:text="admins"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:layout_marginTop="5dp"/>


        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearRed"
        android:layout_width="0dp"
        android:layout_height="70dp"
        app:layout_constraintTop_toBottomOf="@id/linearYellow"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginStart="5dp"
        android:background="#B22222"
        android:layout_marginEnd="5dp">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="60dp"
            android:layout_height="70dp"
            android:background="#8B0000"
            android:src="@drawable/users"
            android:padding="10dp"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:layout_marginStart="20dp"
                android:text="3"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:textSize="15sp"
                android:text="logged in"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:layout_marginTop="5dp"/>




        </LinearLayout>


    </LinearLayout>

 <RelativeLayout
     android:id="@+id/relativeLayout"
     android:layout_width="match_parent"
     android:layout_height="70dp"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintTop_toBottomOf="@id/linearGreen"
     android:layout_marginTop="10dp"
     android:layout_marginStart="5dp"
     android:layout_marginEnd="5dp"
     android:background="#80000000">

     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
         android:layout_marginTop="10dp"
         android:textColor="#FFFFFF"
         android:textSize="15sp"
         android:text="@string/welcome"
         android:layout_marginStart="10dp"/>

     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_toRightOf="@id/textView"
         android:layout_marginTop="10dp"
         android:layout_marginStart="5dp"
         android:layout_alignParentTop="true"
         android:textSize="15sp"
         android:textColor="#FFFFFF"
         android:text="@string/name"
         android:textStyle="bold"/>

     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="#FFFFFF"
         android:textSize="15sp"
         android:text="@string/log"
         android:layout_below="@id/textView"
         android:layout_marginStart="10dp"/>

 </RelativeLayout>

    <LinearLayout
        android:id="@+id/qrCode"
        android:layout_width="0dp"
        android:layout_height="140dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/relativeLayout"
        android:layout_marginTop="10dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:background="#80000000">

        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_gravity="center"
            android:background="@drawable/qrcodee"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:layout_marginTop="5dp"
            android:text="@string/scan"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/activities"
        android:layout_width="0dp"
        android:layout_height="140dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/relativeLayout"
        android:layout_marginTop="10dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:background="#80000000">

        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_gravity="center"
            android:background="@drawable/activities"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:layout_marginTop="5dp"
            android:text="@string/activity"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/newMember"
        android:layout_width="0dp"
        android:layout_height="140dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/qrCode"
        android:layout_marginTop="10dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:background="#80000000">

        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_gravity="center"
            android:background="@drawable/members"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:layout_marginTop="5dp"
            android:text="new member"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/members"
        android:layout_width="0dp"
        android:layout_height="140dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activities"
        android:layout_marginTop="10dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:background="#80000000">

        <ImageView
            android:id="@+id/image"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_gravity="center"
            android:background="@drawable/users"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:layout_marginTop="5dp"
            android:text="members"/>

    </LinearLayout>























</androidx.constraintlayout.widget.ConstraintLayout>